--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,7 +35,8 @@ body {
 
 body {
   overflow-x: hidden;
-}
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+} 
 
 .search-container-open {
   left: 0;
