--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -164,3 +164,31 @@ ul li.starclass:before {
 .bannerSizing{
   height:550px !important
 }
+
+.calculatorFormStyling{
+  padding:3rem;
+  display: grid;
+  grid-template-columns: repeat(2,300px);
+  gap:1rem;
+  row-gap:1rem;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 992px){
+  .calculatorFormStyling{
+    grid-template-columns: repeat(2,300px);
+  }
+}
+
+
+@media only screen and (max-width: 768px){
+    .calculatorFormStyling{
+      grid-template-columns: repeat(1,400px);
+    }
+}
+@media only screen and (max-width: 600px){
+  .calculatorFormStyling{
+    grid-template-columns: repeat(1,300px);
+  }
+}
+
