--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -163,7 +163,16 @@ ul li.starclass:before {
   margin-right: 0.5rem;
   
 }
+
+.custom-list >li:before{
+  content: '\2726';
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+}
  
+ol li{
+  list-style: number;
+}
 
 
 .bannerSizing {
