--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -223,5 +223,6 @@ ul li.starclass:before {
 
 
 .sub_items_text_color  p{
-  color: rgb(148 163 184);
+  color: #a5a8f7;
 }
+/* /rgb(148 163 184); */
