--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -171,16 +171,6 @@ ul li.starclass:before {
   list-style-type: none;
 }
 
-/* ol li{
-  list-style-type: decimal;
-} */
-
-
-/* .bannerSizing {
-  height: 550px !important
-} */
-
-
 .calculatorFormStyling {
   padding: 3rem;
   display: grid;
@@ -225,23 +215,20 @@ ul li.starclass:before {
 
 .sub_items_text_color p {
   /* color: #a5a8f7; */
-  color:rgba(255,255,255,0.6)
+  color:rgba(255, 255, 255, 0.9)
 }
 
-/* /rgb(148 163 184); */
-
-.lineclamping {
+/* .lineclamping {
   width:1fr;
-  
-}
+} */
 
-.checking{
+/* .checking{
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;  
   overflow: hidden;
   text-overflow: 'ellipsis',
-}
+} */
 
 .sub_items_text_color p{
   display: -webkit-box;
@@ -249,4 +236,8 @@ ul li.starclass:before {
   -webkit-box-orient: vertical;  
   overflow: hidden;
   text-overflow: 'ellipsis',
+}
+
+.viewMoreColor{
+  color:white;
 }
