--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -53,3 +53,29 @@
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     z-index: 3;
 }
+
+
+.box_animation {
+    position: relative;
+    animation-name: bounce-box;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+  }
+  
+  @keyframes bounce-box {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
