fix: bugs fixing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -297,3 +297,39 @@ ul li.starclass:before {
  gap: 5rem;
  margin: 2rem 0;
 }
+
+/* .slick-prev:before, .slick-next:before{
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #f4c402 !important;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 20px;
+  z-index: 1;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.slick-next:before, .slick-next:before{
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #ffcc00 !important;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 20px;
+  z-index: 1;
+  cursor: pointer;
+  transition: all 0.3s ease;
+} */
