--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -347,3 +347,8 @@ ul li.starclass:before {
   background-color: unset !important;
   z-index: unset !important;
 } */
+
+fa-icon > svg {
+  width: 12px !important;
+  height: 12px !important;
+}
